--- a/TODOs/Storyboards/Base.lproj/Main.storyboard
+++ b/TODOs/Storyboards/Base.lproj/Main.storyboard
@@ -71,17 +71,20 @@
                     <navigationItem key="navigationItem" title="TODOs" largeTitleDisplayMode="always" id="uzk-y5-BPN">
                         <barButtonItem key="backBarButtonItem" title=" " id="DUX-QX-NP8"/>
                         <barButtonItem key="leftBarButtonItem" title="Lists" id="iEN-Rb-D4j">
+                            <color key="tintColor" systemColor="systemPurpleColor"/>
                             <connections>
                                 <action selector="tappedListsBarButtonItem:" destination="BYZ-38-t0r" id="z4b-Gy-nWj"/>
                             </connections>
                         </barButtonItem>
                         <rightBarButtonItems>
                             <barButtonItem title="Item" id="LYx-IW-y0e">
+                                <color key="tintColor" systemColor="systemPurpleColor"/>
                                 <connections>
                                     <action selector="tappedSettingsBarButtonItem:" destination="BYZ-38-t0r" id="ePK-F5-Vyp"/>
                                 </connections>
                             </barButtonItem>
                             <barButtonItem systemItem="add" id="B08-ZY-5WR">
+                                <color key="tintColor" systemColor="systemPurpleColor"/>
                                 <connections>
                                     <action selector="tappedActionBarButtonItem:" destination="BYZ-38-t0r" id="I8i-Po-meE"/>
                                 </connections>
@@ -130,6 +133,9 @@
         </systemColor>
         <systemColor name="systemGroupedBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPurpleColor">
+            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
