--- a/TODOs/Classes/Cells/RecurringTodoCell.xib
+++ b/TODOs/Classes/Cells/RecurringTodoCell.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17124"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,14 +17,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="TODO Item" translatesAutoresizingMaskIntoConstraints="NO" id="TSm-JL-ifc">
-                        <rect key="frame" x="20" y="20" width="260" height="33"/>
+                        <rect key="frame" x="20" y="12" width="260" height="33"/>
                         <color key="backgroundColor" systemColor="tableCellGroupedBackgroundColor"/>
                         <color key="textColor" systemColor="labelColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                     <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6WU-wZ-bqR">
-                        <rect key="frame" x="296" y="20" width="62" height="34"/>
+                        <rect key="frame" x="296" y="12" width="62" height="34"/>
                         <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                         <state key="normal" title="Button"/>
                         <connections>
@@ -34,10 +33,10 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="TSm-JL-ifc" secondAttribute="bottom" priority="999" constant="20" symbolic="YES" id="3az-dy-u1z"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="TSm-JL-ifc" secondAttribute="bottom" priority="999" constant="12" id="3az-dy-u1z"/>
                     <constraint firstItem="6WU-wZ-bqR" firstAttribute="leading" secondItem="TSm-JL-ifc" secondAttribute="trailing" constant="16" id="EME-dM-fb9"/>
                     <constraint firstItem="6WU-wZ-bqR" firstAttribute="top" secondItem="TSm-JL-ifc" secondAttribute="top" id="QsI-bm-isN"/>
-                    <constraint firstItem="TSm-JL-ifc" firstAttribute="top" secondItem="Zws-an-4WZ" secondAttribute="top" constant="20" symbolic="YES" id="gWy-T6-4NE"/>
+                    <constraint firstItem="TSm-JL-ifc" firstAttribute="top" secondItem="Zws-an-4WZ" secondAttribute="top" constant="12" id="gWy-T6-4NE"/>
                     <constraint firstAttribute="trailing" secondItem="6WU-wZ-bqR" secondAttribute="trailing" constant="20" symbolic="YES" id="l8F-we-wkG"/>
                     <constraint firstItem="TSm-JL-ifc" firstAttribute="leading" secondItem="Zws-an-4WZ" secondAttribute="leading" constant="20" symbolic="YES" id="tHI-2v-Mro"/>
                 </constraints>
@@ -54,9 +53,6 @@
     <resources>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="tableCellGroupedBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="tableCellGroupedBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
