--- a/TODOs/Classes/Cells/TodoCell.xib
+++ b/TODOs/Classes/Cells/TodoCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="378" height="121"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="TODO Item" translatesAutoresizingMaskIntoConstraints="NO" id="TSm-JL-ifc">
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="TODO Item" translatesAutoresizingMaskIntoConstraints="NO" id="TSm-JL-ifc" customClass="DataTextView" customModule="TODOs" customModuleProvider="target">
                         <rect key="frame" x="20" y="12" width="338" height="33"/>
                         <color key="backgroundColor" systemColor="tableCellGroupedBackgroundColor"/>
                         <color key="textColor" systemColor="labelColor"/>
