--- a/TODOs/Classes/Cells/SettingCell.xib
+++ b/TODOs/Classes/Cells/SettingCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,13 +16,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitle" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9vp-ma-8we">
-                        <rect key="frame" x="20" y="20" width="308" height="42.5"/>
+                        <rect key="frame" x="24" y="20" width="304" height="36"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="750" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ak4-Pc-zoa">
-                        <rect key="frame" x="336" y="26" width="51" height="31"/>
+                        <rect key="frame" x="336" y="22.5" width="51" height="31"/>
                         <connections>
                             <action selector="didToggleOnOff:" destination="Kvj-2u-MfE" eventType="valueChanged" id="saF-mc-qwg"/>
                         </connections>
@@ -31,7 +31,7 @@
                 <constraints>
                     <constraint firstItem="ak4-Pc-zoa" firstAttribute="leading" secondItem="9vp-ma-8we" secondAttribute="trailing" constant="8" symbolic="YES" id="1dI-E8-OSb"/>
                     <constraint firstItem="ak4-Pc-zoa" firstAttribute="centerY" secondItem="9vp-ma-8we" secondAttribute="centerY" id="MYi-WP-iuV"/>
-                    <constraint firstItem="9vp-ma-8we" firstAttribute="leading" secondItem="tGe-TY-Ww9" secondAttribute="leading" constant="20" symbolic="YES" id="gBa-wa-Lny"/>
+                    <constraint firstItem="9vp-ma-8we" firstAttribute="leading" secondItem="tGe-TY-Ww9" secondAttribute="leading" constant="24" id="gBa-wa-Lny"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="9vp-ma-8we" secondAttribute="bottom" priority="999" constant="20" symbolic="YES" id="hTf-cS-gNy"/>
                     <constraint firstAttribute="trailing" secondItem="ak4-Pc-zoa" secondAttribute="trailing" constant="20" symbolic="YES" id="hqx-X4-9lo"/>
                     <constraint firstItem="9vp-ma-8we" firstAttribute="top" secondItem="tGe-TY-Ww9" secondAttribute="top" constant="20" symbolic="YES" id="zx8-jQ-kJs"/>
