--- a/TODOs/Classes/Cells/TodoCell.xib
+++ b/TODOs/Classes/Cells/TodoCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,31 +17,42 @@
                 <rect key="frame" x="0.0" y="0.0" width="378" height="121"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="TODO Item" translatesAutoresizingMaskIntoConstraints="NO" id="TSm-JL-ifc" customClass="DataTextView" customModule="TODOs" customModuleProvider="target">
+                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3FX-AX-xAT">
                         <rect key="frame" x="20" y="12" width="338" height="33"/>
-                        <color key="backgroundColor" systemColor="tableCellGroupedBackgroundColor"/>
-                        <color key="textColor" systemColor="labelColor"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no"/>
-                        <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" shipmentTrackingNumber="YES" flightNumber="YES"/>
-                    </textView>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="TODO Item" translatesAutoresizingMaskIntoConstraints="NO" id="TSm-JL-ifc" customClass="DataTextView" customModule="TODOs" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="318" height="33"/>
+                                <color key="backgroundColor" systemColor="tableCellGroupedBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no"/>
+                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" shipmentTrackingNumber="YES" flightNumber="YES"/>
+                            </textView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="QhS-Hc-H0e">
+                                <rect key="frame" x="318" y="0.5" width="20" height="32"/>
+                                <imageReference key="image" image="arrow.trianglehead.2.clockwise.rotate.90.circle" catalog="system" symbolScale="medium"/>
+                            </imageView>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="TSm-JL-ifc" secondAttribute="bottom" priority="999" constant="12" id="3az-dy-u1z"/>
-                    <constraint firstItem="TSm-JL-ifc" firstAttribute="top" secondItem="Zws-an-4WZ" secondAttribute="top" constant="12" id="gWy-T6-4NE"/>
-                    <constraint firstItem="TSm-JL-ifc" firstAttribute="leading" secondItem="Zws-an-4WZ" secondAttribute="leading" constant="20" symbolic="YES" id="tHI-2v-Mro"/>
-                    <constraint firstAttribute="trailing" secondItem="TSm-JL-ifc" secondAttribute="trailing" constant="20" symbolic="YES" id="x5G-wN-F01"/>
+                    <constraint firstItem="3FX-AX-xAT" firstAttribute="leading" secondItem="Zws-an-4WZ" secondAttribute="leading" constant="20" symbolic="YES" id="0W1-Dq-APz"/>
+                    <constraint firstAttribute="trailing" secondItem="3FX-AX-xAT" secondAttribute="trailing" constant="20" symbolic="YES" id="1kj-4d-s1a"/>
+                    <constraint firstItem="3FX-AX-xAT" firstAttribute="top" secondItem="Zws-an-4WZ" secondAttribute="top" priority="999" constant="12" id="GTr-l9-j2z"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="3FX-AX-xAT" secondAttribute="bottom" priority="999" constant="12" id="Y4u-cS-KKA"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" systemColor="tableCellGroupedBackgroundColor"/>
             <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
             <connections>
+                <outlet property="isSettingIconView" destination="QhS-Hc-H0e" id="kuX-Mb-Y8Q"/>
                 <outlet property="textView" destination="TSm-JL-ifc" id="0B2-9W-egG"/>
             </connections>
             <point key="canvasLocation" x="-43.478260869565219" y="106.80803571428571"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="arrow.trianglehead.2.clockwise.rotate.90.circle" catalog="system" width="128" height="123"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
